Maths A/B split into two-column format

--- a/style.css
+++ b/style.css
@@ -241,3 +241,15 @@ tr.top{
   color:white;
   border:1px solid black;
 }
+
+.column {
+  float: left;
+  width: 50%;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
